# gitpathlib

./: .gitignore  LICENSE  README.rst  pyproject.toml  setup.py
docs/: Makefile  backends.rst  conf.py  index.rst  main.rst  make.bat  pathlib_differences.rst  requirements.txt
gitpathlib/: __init__.py  gitpath.py  gp_base.py  gp_pygit.py  gp_subprocess.py  testutil.py  util.py
test_gitpathlib/: test_gitpath.py  test_utils.py
